--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,7 @@
         android:layout_marginTop="50dp"
         android:layout_height="wrap_content"
         android:hint="@string/Login_email"
-        app:startIconDrawable="@drawable/ic_circle_account"
+        app:startIconDrawable="@drawable/ic_email"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_login_sub_title"
